[package]
name = "easy_yaml"
version = "0.1.0"
edition = "2021"
categories = ["encoding", "parser-implementations"]
authors = ["Kirill Leonov <leonov7632@gmail.com>"]
repository = "https://github.com/leonovk/easy_yaml"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yml = "0.0.4"
